--- a/src/scss/general/variables.scss
+++ b/src/scss/general/variables.scss
@@ -1,8 +1,9 @@
 $c-light: #ffffff;
 $c-blue: linear-gradient(90deg, #3464E0 0%, #2955C9 100%);
-$c-grey: #C4C4C4;
+$c-link: #9CBAF0;
+$c-grey: #F1F4F9;
 
-$font: "Proxima Nova", "Arial", sans-serif;
+$font: "Russia", "Arial", sans-serif;
 $font-alt: "Radical",  "Arial", sans-serif;
 
 $stop-scaling: 2000px;
