--- a/src/scss/general/fonts.scss
+++ b/src/scss/general/fonts.scss
@@ -1,15 +1,12 @@
+/* Russia - regular */
 @font-face {
-  font-family: "Proxima Nova";
+  font-family: "Russia";
+  src: url("../fonts/8425.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/8425.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+  url("../fonts/8425.svg") format("svg"), /* Legacy iOS */
+  url("../fonts/8425.ttf") format("truetype"), /* Safari, Android, iOS */
+  url("../fonts/8425.woff") format("woff"), /* Modern Browsers */
+  url("../fonts/8425.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: normal;
   font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url("../fonts/ProximaNova-Semibold.woff2") format("woff2"), url("../fonts/ProximaNova-Semibold.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Radical";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("../fonts/Radical.woff2") format("woff2"), url("../fonts/Radical.woff") format("woff");
 }
