--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,5 +7,5 @@
 
 @import "blocks/btn.scss";
 @import "blocks/page-header";
-@import "blocks/slider.scss";
+@import "blocks/slider";
 @import "blocks/social-block.scss";
