update slider and margins for header

--- a/src/pug/sections/_slider.pug
+++ b/src/pug/sections/_slider.pug
@@ -1,12 +1,13 @@
-// Основной блок слайдера
-.slider
-    // Первый слайд
-    .slider__item.slider__item--current
-        img(src="img/city.png" class="slider__slide slider__slide--current")
-        p.slider__description Портал РГСУ <br> по поиску портфолио <br> выпускников, студентов и аспирантов
-    // Второй слайд
-    .slider__item.slider__item--left
-        img(src="img/chicks.png" class="slider__slide")
-    // Третий слайд
-    .slider__item.slider__item--right
-        img(src="img/students.png" class="slider__slide")
+#carousel
+    .card
+        img(src="img/city.png")
+        p.card__description
+            span Портал РГСУ  <br>  по поиску портфолио  <br>  выпускников, студентов и аспирантов
+    .card
+        img(src="img/chicks.png")
+        p.card__description
+            span Портал РГСУ  <br>  по поиску портфолио  <br>  выпускников, студентов и аспирантов
+    .card
+        img(src="img/students.png")
+        p.card__description
+            span Портал РГСУ  <br>  по поиску портфолио  <br>  выпускников, студентов и аспирантов
