Сделал карточки для десктопа, надо для мобилки. Начал делать слайдер "Объявления"

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -4,10 +4,9 @@ header.page-header.js-header
             button.page-header__sidebar-toggler
                 span Профиль
         .page-header__logo
-            <svg class="page-header__logo-image" width="48" height="48" fill="#FFFFFF">
-            <use xlink:href="#brain"></use>
-            </svg>
-            p.page-header__logo-description Студенческий портал РГСУ
+            svg.page-header__logo-image(width="48" height="48" fill="#FFFFFF")
+                use(xlink:href="#brain")
+            h1.page-header__logo-description Студенческий портал РГСУ
 
         .page-header__menu
             button.page-header__toggler.js-menu-toggler
