--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,5 +7,8 @@
 
 @import "blocks/btn.scss";
 @import "blocks/page-header";
+@import "blocks/carousel";
 @import "blocks/slider";
+@import "blocks/info";
+@import "blocks/ads";
 @import "blocks/social-block.scss";
