Слайдеры оба ++, завтра >> img: relative, к нему block__content absolute;

--- a/src/pug/sections/_slider.pug
+++ b/src/pug/sections/_slider.pug
@@ -1,5 +1,5 @@
 #carousel.carousel.main__carousel
-    h2.carousel__title.visually-hidden
+    h2.carousel__title.visually-hidden Карусель
     .card.carousel__card
         img(src="img/city.png")
         p.card__description
