--- a/src/scss/general/variables.scss
+++ b/src/scss/general/variables.scss
@@ -1,7 +1,7 @@
 $c-light: #ffffff;
 $c-blue: linear-gradient(90deg, #3464E0 0%, #2955C9 100%);
 $c-link: #9CBAF0;
-$c-grey: #e5e5e5;
+$c-grey: #f1f4f9;
 
 $font: "Russia", "Arial", sans-serif;
 $font-alt: "Radical",  "Arial", sans-serif;
