--- a/src/scss/blocks/_news.scss
+++ b/src/scss/blocks/_news.scss
@@ -1,12 +1,26 @@
-.slider {
-  position: relative;
-  width: 1400px;
-  margin: 0 auto;
-  border-radius: 4px;
-  min-height: 300px;
+.news {
+  @include container;
+  margin-bottom: 82px;
+  .divider {
+    width: 67%;
+  }
 }
 
-.slider__buttons {
+.news__titile {
+  color: #6E7781;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 26px;
+  margin: 0 21px 0 0;
+}
+
+.news__slider {
+  width: 1400px;
+}
+
+
+.news__buttons {
   width: 140px;
   display: flex;
   justify-content: space-between;
@@ -14,20 +28,20 @@
   margin-left: 20px;
 }
 
-.slider__items {
+.news__items {
   overflow: hidden;
   display: flex;
 }
 
-.slider__item {
+.news__item {
   padding-right: 30px;
 }
 
-.slider__item:last-child {
+.news__item:last-child {
   padding-right: 0;
 }
 
-.slider__control {
+.news__control {
   background: url("../img/icons/icons.svg#arrow") no-repeat center;
   background-size: cover;
   transform: rotate(180deg);
@@ -41,21 +55,21 @@
   transition-property: opacity, visibility, background-color;
 }
 
-.slider__control--active {
+.news__control--active {
   opacity: 1;
   visibility: visible;
 }
 
-.slider__control--next {
+.news__control--next {
   padding-left: 26px;
 }
 
-.slider__control--previous {
+.news__control--previous {
   padding-right: 26px;
   transform: rotate(0);
 }
 
-.slider__indicators {
+.news__indicators {
   z-index: 15;
   display: flex;
   width: 36px;
@@ -64,7 +78,7 @@
   align-items: center;
 }
 
-.slider__indicators li {
+.news__indicators li {
   box-sizing: content-box;
   flex: 0 1 auto;
   width: 2px;
@@ -77,90 +91,25 @@
   border-radius: 2px;
 }
 
-.slider__indicators li.active {
+.news__indicators li.active {
   opacity: 1;
   height: 26px;
   background-color: #3464E0;
 }
 
-.block {
-  border-radius: 4px;
-  height: 300px;
-  padding: 29px;
-  display: flex;
-  justify-content: space-between;
-  &--hot {
-    position: relative;
-    &::after {
-      content: '';
-      display: block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 27px 27px 0 0;
-      border-color: #e06363 transparent transparent transparent;
-    }
-  }
-  &--attention {
-    position: relative;
-    &::after {
-      content: 'важно';
-      display: block;
-      position: absolute;
-      right: 23px;
-      top: 25px;
-      background-color: #2BC584;
-      font-size: 14px;
-      line-height: 26px;
-      padding: 2px 11px;
-    }
-  }
-}
-
-.block__content {
-  position: relative;
-  color: inherit;
-  display: block;
-  width: 100%;
-}
-
-.block--wide {
-  background: #3464E0;
-  width: 545px;
-}
-
-.block--medium {
-  background: #fff;
-  width: 430px;
-}
-
-.block--narrow {
-  background: #fff;
-  width: 420px;
-}
-
-.block__content-news {
-  background: transparent url("../img/studyear.png"),linear-gradient(180deg, rgba(68, 68, 68, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-  background-size: cover;
-}
-
-.block__content-news--even {
-  background: transparent url("../img/studyspring.png"), linear-gradient(180deg, rgba(68, 68, 68, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-}
-
-.slider__item-title {
+.news__item-title {
   font-style: normal;
   font-weight: 500;
-  font-size: 24px;
-  line-height: 30px;
-  margin: 0 0 23px;
-  width: 353px;
+  font-size: 18px;
+  line-height: 26px;
+  margin: 0 0 0;
+  width: 391px;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
 }
 
-.slider__item-descr {
+.news__item-descr {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -181,7 +130,7 @@
   }
 }
 
-.slider__item-link {
+.news__item-link {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -209,30 +158,20 @@
   }
 }
 
-.slider__item-date {
+.news__item-date {
   margin: 0;
   font-style: normal;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 14px;
   line-height: 26px;
-  span {
-    display: block;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 26px;
-    padding-top: 12px;
-    padding-bottom: 11px;
-  }
-  &--dark {
-    color: #C3CAD6;
-    span {
-      color: #c3cad6;
-    }
-  }
+  padding: 3px 12px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 2px;
+  width: 97px;
+  text-transform: uppercase;
 }
 
-.slider__item-state {
+.news__item-state {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
