--- a/src/scss/general/scaffolding.scss
+++ b/src/scss/general/scaffolding.scss
@@ -98,3 +98,9 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.divider {
+  display: block;
+  width: 75.41%;
+  border-bottom: 1px solid #E4ECFA;
+}
