--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,4 +11,5 @@
 @import "blocks/slider";
 @import "blocks/info";
 @import "blocks/ads";
+@import "blocks/news";
 @import "blocks/social-block.scss";
