--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,4 +12,6 @@
 @import "blocks/info";
 @import "blocks/ads";
 @import "blocks/news";
+@import "blocks/banner";
+@import "blocks/portfolio-tabs";
 @import "blocks/social-block.scss";
