--- a/src/pug/sections/_main.pug
+++ b/src/pug/sections/_main.pug
@@ -3,3 +3,5 @@ main.main
     include ./_info.pug
     include ./_advertisement.pug
     include ./_news.pug
+    include ./_banner.pug
+    include ./_portfolio-tabs.pug
