--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -16,23 +16,38 @@
                     a(href="#").block__content
                         p.news__item-date 1 сентября
                         h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                picture.news__picture
+                    source(srcset="img/studyear.webp" type="image/webp")
+                    img(src="img/studyear.png")
             .news__item.js-slider__item
                 .block.block--wide.block--attention.block__content-news--even
                     a(href="#").block__content
                         p.news__item-date.news__item-date--dark 28 августа
                         h3.news__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                picture.news__picture
+                    source(srcset="img/studyspring.webp" type="image/webp")
+                    img(src="img/studyspring.png")
             .news__item.js-slider__item
                 .block.block--wide.block__content-news
                     a(href="#").block__content
                         p.news__item-date 1 сентября
-                        h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                        h3.news__item-title Поздравление с Днем знаний и началом новоstudyspringго учебного года
+                picture.news__picture
+                    source(srcset="img/studyear.webp" type="image/webp")
+                    img(src="img/studyear.png")
             .news__item.js-slider__item
                 .block.block--wide.block__content-news--even
                     a(href="#").block__content
                         p.news__item-date 1 сентября
                         h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                picture.news__picture
+                    source(srcset="img/studyspring.webp" type="image/webp")
+                    img(src="img/studyspring.png")
             .news__item.js-slider__item
                 .block.block--wide.block__content-news
                     a(href="#").block__content
                         p.news__item-date 1 сентября
                         h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                picture.news__picture
+                    source(srcset="img/studyear.webp" type="image/webp")
+                    img(src="img/studyear.png")
