--- a/src/scss/blocks/_news.scss
+++ b/src/scss/blocks/_news.scss
@@ -1,6 +1,6 @@
 .news {
   @include container;
-  margin-bottom: 82px;
+  margin-bottom: 52px;
   .divider {
     width: 67%;
   }
@@ -35,6 +35,7 @@
 
 .news__item {
   padding-right: 30px;
+  position: relative;
 }
 
 .news__item:last-child {
@@ -185,5 +186,19 @@
   }
   &--offline {
     background-color: #3464E0;
+  }
+}
+
+.news__picture {
+  position: absolute;
+  top: 0;
+  &::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background: linear-gradient(180deg, rgba(68, 68, 68, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
   }
 }
