--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -2,6 +2,7 @@ header.page-header.js-header
     .page-header__wrapper
         .page-header__sidebar
             button.page-header__sidebar-toggler
+                span.toggler-element
                 span Профиль
         .page-header__logo
             svg.page-header__logo-image(width="48" height="48" fill="#FFFFFF")
