--- a/src/pug/sections/_main.pug
+++ b/src/pug/sections/_main.pug
@@ -1,7 +1,8 @@
 main.main
-    include ./_slider.pug
+    include ./_enter.pug
     include ./_info.pug
     include ./_advertisement.pug
     include ./_news.pug
-    include ./_banner.pug
-    include ./_portfolio-tabs.pug
+    include ./_swiper.pug
+    //include ./_banner.pug
+    //include ./_portfolio-tabs.pug
