--- a/src/pug/sections/_advertisement.pug
+++ b/src/pug/sections/_advertisement.pug
@@ -1,5 +1,5 @@
-.advertisement
-    .advertisement__wrapper(style='display: flex;align-items: center;margin-bottom: 38px;')
+//.advertisement
+    //.advertisement__wrapper(style='display: flex;align-items: center;margin-bottom: 38px;')
         h2.advertisement__titile Объявления
         span.divider
         div.slider__buttons
@@ -9,7 +9,7 @@
                 li.second
                 li.third
             div.slider__control.slider__control--next.js-slider__next
-    .slider.js-slider
+    //.slider.js-slider
         .slider__items.js-slider__items
             .slider__item.js-slider__item
                 .block.block--wide
@@ -40,6 +40,71 @@
                             span
                         p.slider__item-state
             .slider__item.js-slider__item
-                .block.block--narrow
+                .block.block--wide
+                    .block__content.block__content--main
+                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                        p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
+                        a(href="#").slider__item-link Подробнее
+                    .block__content--aside
+                        p.slider__item-date 19
+                            span сентября
+                        p.slider__item-state.slider__item-state--online Онлайн
             .slider__item.js-slider__item
                 .block.block--wide
+                    .block__content.block__content--main
+                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                        p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
+                        a(href="#").slider__item-link Подробнее
+                    .block__content--aside
+                        p.slider__item-date 19
+                            span сентября
+                        p.slider__item-state.slider__item-state--online Онлайн
+section.advertisement
+    .advertisement__container.swiper-container
+        .advertisement__header
+            h2.advertisement__titile Объявления
+            span.divider
+            div.advertisement__buttons
+                .swiper-button-prev
+                .swiper-pagination
+                .swiper-button-next
+        .swiper-wrapper.advertisement__wrapper
+            // Slides
+            .swiper-slide
+                .block.block--wide
+                    .block__content.block__content--main
+                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                        p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
+                        a(href="#").slider__item-link Подробнее
+                    .block__content--aside
+                        p.slider__item-date 19
+                            span сентября
+                        p.slider__item-state.slider__item-state--online Онлайн
+            .swiper-slide
+                .block.block--medium.block--hot
+                    .block__content.block__content--main
+                        p.slider__item-descr.slider__item-descr--medium Обновленные профессиональные стандарты в области социальной работы вступают в действие
+                        a(href="#").slider__item-link.slider__item-link--dark Подробнее
+                    .block__content--aside
+                        p.slider__item-date.slider__item-date--dark 19
+                            span сентября
+                        p.slider__item-state.slider__item-state--offline Офлайн
+            .swiper-slide
+                .block.block--narrow
+                    .block__content.block__content--main
+                        p.slider__item-descr.slider__item-descr--narrow Магистр экономических наук из Ярославской области стал Лауреатом – победителем Всероссийского конкурса
+                        a(href="#").slider__item-link.slider__item-link--dark Подробнее
+                    .block__content--aside
+                        p.slider__item-date.slider__item-date--dark
+                            span
+                        p.slider__item-state
+            .swiper-slide
+                .block.block--wide
+                    .block__content.block__content--main
+                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                        p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
+                        a(href="#").slider__item-link Подробнее
+                    .block__content--aside
+                        p.slider__item-date 19
+                            span сентября
+                        p.slider__item-state.slider__item-state--online Онлайн
