--- a/src/scss/blocks/_ads.scss
+++ b/src/scss/blocks/_ads.scss
@@ -4,6 +4,16 @@
   margin-bottom: 82px;
 }
 
+.advertisement__header {
+  width: 100%;
+  margin-bottom: 38px;
+  display: flex;
+  align-items: center;
+  .divider {
+
+  }
+}
+
 .advertisement__titile {
   color: #6E7781;
   font-style: normal;
@@ -11,4 +21,23 @@
   font-size: 26px;
   line-height: 26px;
   margin: 0 21px 0px 0;
+}
+
+.advertisement__container {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  /* Fix of Webkit flickering */
+  z-index: 1;
+}
+
+.advertisement__buttons {
+  display: flex;
+  width: 142px;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 33px;
 }
