--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,14 +4,15 @@
 @import "general/mixins.scss";
 @import "general/fonts.scss";
 @import "general/scaffolding.scss";
-
 @import "blocks/btn.scss";
+
 @import "blocks/page-header";
-@import "blocks/carousel";
-@import "blocks/slider";
+@import "blocks/enter";
 @import "blocks/info";
 @import "blocks/ads";
+@import "blocks/slider";
 @import "blocks/news";
 @import "blocks/banner";
 @import "blocks/portfolio-tabs";
 @import "blocks/social-block.scss";
+
