--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -7,7 +7,7 @@ header.page-header.js-header
         .page-header__logo
             svg.page-header__logo-image(width="48" height="48" fill="#FFFFFF")
                 use(xlink:href="#brain")
-            h1.page-header__logo-description Студенческий портал РГСУ
+            h1.page-header__logo-description Smart портал РГСУ
 
         .page-header__menu
             button.page-header__toggler.js-menu-toggler
@@ -21,4 +21,4 @@ header.page-header.js-header
                             a.js-menu-link(href="#") Портфолио студентов
 
         .page-header__login
-            button.page-header__login-button ramzan95@rgsu.net
+            button.page-header__login-button Войти на портал
