--- a/src/pug/sections/_main.pug
+++ b/src/pug/sections/_main.pug
@@ -1,8 +1,8 @@
 main.main
-    include ./_enter.pug
-    include ./_info.pug
-    include ./_advertisement.pug
-    include ./_news.pug
-    include ./_swiper.pug
-    //include ./_banner.pug
-    //include ./_portfolio-tabs.pug
+    include ./_enter
+    include ./_info
+    include ./_portfolio
+    include ./_advertisement
+    include ./_news
+    include ./_banner
+    include ./_portfolio-tabs
