--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/page-header";
 @import "blocks/enter";
 @import "blocks/info";
+@import "blocks/portfolio";
 @import "blocks/ads";
 @import "blocks/slider";
 @import "blocks/news";
