--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -1,17 +1,14 @@
-.news
-    .news__wrapper(style='display: flex;align-items: center;margin-bottom: 38px;')
-        h2.news__titile Студенческие новости
-        span.divider
-        div.news__buttons
-            div.news__control.news__control--previous.js-slider__previous
-            ol.news__indicators.js-slider__indicators
-                li.first.active
-                li.second
-                li.third
-            div.news__control.news__control--next.js-slider__next
-    .news__slider.js-slider
-        .news__items.js-slider__items
-            .news__item.js-slider__item
+section.news
+    .news__container.swiper-container
+        .news__header
+            h2.news__titile(style="margin-right: 10px") Студенческие новости
+            span.divider
+            div.news__buttons
+                .swiper-button-prev
+                .swiper-pagination
+                .swiper-button-next
+        .news__wrapper.swiper-wrapper
+            .news__item.swiper-slide
                 .block.block--wide.block__content-news
                     a(href="#").block__content
                         p.news__item-date 1 сентября
@@ -19,15 +16,15 @@
                 picture.news__picture
                     source(srcset="img/studyear.webp" type="image/webp")
                     img(src="img/studyear.png")
-            .news__item.js-slider__item
-                .block.block--wide.block--attention.block__content-news--even
+            .news__item.swiper-slide
+                .block.block--wide.block--attention.block__content-news
                     a(href="#").block__content
                         p.news__item-date.news__item-date--dark 28 августа
                         h3.news__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
                 picture.news__picture
                     source(srcset="img/studyspring.webp" type="image/webp")
                     img(src="img/studyspring.png")
-            .news__item.js-slider__item
+            .news__item.swiper-slide
                 .block.block--wide.block__content-news
                     a(href="#").block__content
                         p.news__item-date 1 сентября
@@ -35,15 +32,15 @@
                 picture.news__picture
                     source(srcset="img/studyear.webp" type="image/webp")
                     img(src="img/studyear.png")
-            .news__item.js-slider__item
-                .block.block--wide.block__content-news--even
+            .news__item.swiper-slide
+                .block.block--wide.block__content-news
                     a(href="#").block__content
                         p.news__item-date 1 сентября
                         h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
                 picture.news__picture
                     source(srcset="img/studyspring.webp" type="image/webp")
                     img(src="img/studyspring.png")
-            .news__item.js-slider__item
+            .news__item.swiper-slide
                 .block.block--wide.block__content-news
                     a(href="#").block__content
                         p.news__item-date 1 сентября
