--- a/src/scss/blocks/_info.scss
+++ b/src/scss/blocks/_info.scss
@@ -1,21 +1,38 @@
-.info {
-  @include container;
-  padding: 0 45px;
-  display: flex;
-  flex-direction: column;
+.info-container {
+  flex-direction: row;
   justify-content: space-between;
   margin-bottom: 70px;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  list-style: none;
+  z-index: 1;
+  overflow: hidden;
+  @include container;
   @media (min-width: 768px) {
     flex-direction: row;
+    flex-wrap: wrap;
+  }
+  @media (min-width: $tablet) {
+
+    overflow: unset;
+  }
+}
+
+.info__wrapper {
+  @media (min-width: $tablet) {
+    justify-content: space-between;
+
     flex-wrap: wrap;
   }
 }
 
 .info__card-block {
-  display: flex;
   justify-content: center;
   width: 100%;
+  min-width: 294px;
+  display: flex;
   @media (min-width: 768px) {
     justify-content: flex-start;
     width: 315px;
@@ -27,6 +44,7 @@
   border-radius: 4px;
   width: 100% ;
   height: 285px;
+  margin: 0 20px;
   position: relative;
   &::before {
     content: "";
@@ -51,7 +69,12 @@
     z-index: -1;
   }
   &--half {
-    max-height: 117px;
+    max-height: 140px;
+    overflow: hidden;
+    @media (min-width: $mobile) {
+      overflow: unset;
+      max-height: 117px;
+    }
     &:hover {
       .info__card-media-description {
         &::before {
@@ -59,6 +82,9 @@
         }
       }
     }
+  }
+  @media (min-width: $tablet + 1px) {
+    margin: 0;
   }
 }
 
@@ -89,14 +115,15 @@
 
 .info__card-media {
   flex-direction: column;
-  display: flex;
-  justify-content: center;
+  //display: none;
+  justify-content: space-between;
   color: #6E7781;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 26px;
   align-items: center;
+  min-height: 285px;
   @media (min-width: 768px) {
     min-height: 285px;
     justify-content: space-between;
@@ -174,7 +201,10 @@
 }
 
 .info__card-date {
-  padding-bottom: 46px;
+  padding-bottom: 20px;
+  @media (min-width: $mobile) {
+    padding-bottom: 46px;
+  }
 }
 
 .info__card-daytime {
@@ -205,5 +235,32 @@
   &:hover {
     background-color: #C3CAD6;
     color: #FFFFFF;
+  }
+}
+
+//Стили для пагинации
+.info__card-pagination {
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  min-width: 74px;
+  width: 100%;
+  z-index: 2;
+  .swiper-pagination-bullet {
+    background: rgba(195, 202, 214, 0.3);
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    &-active {
+      background: #C3CAD6;
+      border-radius: 14px;
+      width: 24px;
+    }
+  }
+  @media (min-width: $tablet) {
+    display: none;
   }
 }
