--- a/src/scss/blocks/_news.scss
+++ b/src/scss/blocks/_news.scss
@@ -15,103 +15,20 @@
   margin: 0 21px 0 0;
 }
 
-.news__slider {
-  max-width: 1400px;
-}
-
-
-.news__buttons {
-  width: 140px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 20px;
-}
-
-.news__items {
-  overflow: hidden;
-  display: flex;
-}
-
-.news__item {
-  padding-right: 30px;
-  position: relative;
-  @media (max-width: $tablet) {
-    margin-right: 20px;
-    padding-right: 0;
-  }
-}
-
-.news__item:last-child {
-  padding-right: 0;
-}
-
-.news__control {
-  background: url("../img/icons/icons.svg#arrow") no-repeat center;
-  background-size: cover;
-  transform: rotate(180deg);
-  height: 18px;
-  width: 24px;
-  border: #fafafa;
-  cursor: pointer;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.15s ease-in-out;
-  transition-property: opacity, visibility, background-color;
-}
-
-.news__control--active {
-  opacity: 1;
-  visibility: visible;
-}
-
-.news__control--next {
-  padding-left: 26px;
-}
-
-.news__control--previous {
-  padding-right: 26px;
-  transform: rotate(0);
-}
-
-.news__indicators {
-  z-index: 15;
-  display: flex;
-  width: 36px;
-  justify-content: space-between;
-  @include  list-reset;
-  align-items: center;
-}
-
-.news__indicators li {
-  box-sizing: content-box;
-  flex: 0 1 auto;
-  width: 2px;
-  height: 15px;
-  text-indent: -999px;
-  cursor: pointer;
-  background-color: #C3CAD6;
-  background-clip: padding-box;
-  transition: .6s ease;
-  border-radius: 2px;
-}
-
-.news__indicators li.active {
-  opacity: 1;
-  height: 26px;
-  background-color: #3464E0;
-}
-
 .news__item-title {
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 26px;
   margin: 0 0 0;
-  max-width: 391px;
   text-transform: uppercase;
   position: absolute;
-  bottom: 0;
+  bottom: 25px;
+  max-width: 100%;
+  padding-right: 20px;
+  @media (min-width: $tablet) {
+    padding-right: 82px;
+  }
 }
 
 .news__item-descr {
@@ -210,4 +127,52 @@
     top: 0;
     background: linear-gradient(180deg, rgba(68, 68, 68, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
   }
+}
+
+.news {
+  @include container;
+  padding: 0 45px;
+  margin-bottom: 82px;
+}
+
+.news__header {
+  width: 100%;
+  margin-bottom: 38px;
+  display: flex;
+  align-items: center;
+  .divider {
+
+  }
+}
+
+.news__titile {
+  color: #6E7781;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 26px;
+  margin: 0 21px 0px 0;
+}
+
+.news__container {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  /* Fix of Webkit flickering */
+  z-index: 1;
+}
+
+.news__buttons {
+  display: flex;
+  width: 142px;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 33px;
+}
+
+.block__content-news {
+  min-width: 300px  ;
 }
