--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   z-index: 10;
-  background: $c-blue;
+  background: #3464e0;
   margin-bottom: 24px;
   @media (max-width: $mobile) {
   }
@@ -18,6 +18,13 @@
 }
 
 .page-header__sidebar {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  border-right: 1px solid #2955c9;
+  @media (min-width: $mobile) {
+    border: none;
+  }
   @media (min-width: $tablet) {
     display: none;
   }
@@ -25,16 +32,17 @@
 
 .page-header__sidebar-toggler {
   font-size: 0;
-  width: 27px;
-  height: 27px;
+  width: 37px;
+  height: 20px;
   background-color: #fff;
   @include btn-reset;
   .toggler-element {
-    width: 100%;
+    width: 24px;
     display: block;
     height: 2px;
     background-color: #fff;
     position: relative;
+    border-radius: 2px;
     &::before,
     &::after {
       display: block;
@@ -42,43 +50,83 @@
       content: "";
       width: 100%;
       height: 2px;
-      top: -10px;
+      top: -7px;
       background-color: #fff;
+      border-radius: 2px;
+      transition: 0.5s;
+    }
+    &::before {
+      width: 15px;
     }
     &::after {
-      top: 10px;
+      top: 7px;
+    }
+  }
+  &:focus {
+    //ДЛЯ ДЕМОНСТРАЦИИ, ПОТОМ ПЕРЕКИНУТЬ В JS
+    .toggler-element {
+      transform: rotate(45deg);
+      &::before {
+        width: 100%;
+        top: 0;
+      }
+      &::after {
+        top: 0;
+        transform: rotate(90deg);
+      }
     }
   }
 }
 
 //logo image
 .page-header__logo {
-  padding-top: 11px;
-  padding-bottom: 11px;
-  @media (min-width: $mobile) {
+  display: flex;
+  align-items: center;
+  padding: 20px 0;
+  @media (min-width: $tablet) {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 230px;
+    width: 267px;
   }
-  @media (min-width: $tablet) {
-    width: 355px;
+  @media (min-width: $mobile) {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
   }
 }
 .page-header__logo-image {
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
   display: none;
-  @media (min-width: $mobile) {
+  @media (min-width: 375px) {
     display: block;
+  }
+  @media (min-width: $mobile) {
+    width: 48px;
+    height: 48px;
+  }
+  @media (min-width: $tablet) {
+    margin-right: 0;
   }
 }
 
 .page-header__logo-description {
-  font-size: 14px;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 23px;
+  margin: 0;
   @media (min-width: $tablet) {
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
+  }
+
+  @media (min-width: $mobile) {
+    font-size: 30px;
   }
 }
 
@@ -90,21 +138,22 @@
   padding-top: 40px;
   background-color: #fff;
   width: 100vw;
-  height: 100vh;
+  min-height: 131px;
   z-index: 1;
   visibility: visible;
   opacity: 0;
   transition: all 300ms ease-in-out;
   .page-header--menu-opened & {
     display: block;
-    z-index: 1;
-    top: 0;
+    z-index: 2;
+    top: 70px;
     opacity: 1;
     transition: all 300ms ease-in-out;
   }
   ul {
     font-weight: normal;
     list-style: none;
+    margin: 0;
     li {
       padding-bottom: 10px;
       a {
@@ -123,7 +172,7 @@
     padding: 0;
     top: 0;
     width: 100%;
-    height: auto;
+    min-height: auto;
     opacity: 1;
     justify-content: space-between;
     ul {
@@ -132,6 +181,9 @@
       justify-content: space-between;
       li {
         padding: 0 43px 0 0;
+        @media (min-width: $tablet) {
+          padding-right: 0;
+        }
 
         a {
           transition: 0.2s;
@@ -149,40 +201,51 @@
 .page-header__toggler {
   @include btn-reset;
   font-size: 0;
-  width: 27px;
-  height: 27px;
+  width: 54px;
+  height: 26px;
+  background: url("../img/icons/icons.svg#key") no-repeat center;
+  background-size: cover;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 2;
-  transition: 0.5s ease-in-out;
-  &::before,
-  &::after {
-    position: absolute;
-    display: block;
-    content: "";
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    background-color: #fff;
-    top: 0;
-  }
-  &::after {
-    top: 10px;
-    box-shadow: 0 10px 0 #fff;
-  }
   .page-header--menu-opened & {
+    background: none #fff;
+    width: 56px;
+    height: 70px;
+    top: 0;
+    right: 0;
+    animation: slideRight .5s;
+    position: absolute;
     &::before,
     &::after {
-      background-color: #2955c9;
+      transition: .5s;
+      content: '';
+      position: absolute;
+      width: 24px;
+      display: block;
+      height: 2px;
+      background-color: blue;
+      transform: rotate(45deg);
+      border-radius: 2px;
     }
     &::after {
-      box-shadow: 0 10px #2955c9;
+      transform: rotate(-45deg);
     }
+
   }
   @media (min-width: $tablet) {
     display: none;
+  }
+}
+
+@keyframes slideRight {
+  from {
+    right: -100%;
+  }
+  to {
+    right: 0;
   }
 }
 
@@ -223,4 +286,27 @@
   }
 }
 
+.page-header__menu {
+  width: 42px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  padding-left: 15px;
+  border-left: 1px solid #2955c9;
 
+  @media (min-width: $mobile) {
+    border: none;
+  }
+  @media (min-width: $tablet) {
+    height: auto;
+    padding: 0;
+    width: auto;
+  }
+}
+
+.page-header__menu-list {
+  min-width: 285px;
+  justify-content: space-between;
+  font-size: 18px;
+  line-height: 21px;
+}
